example/errors/go.mod
module github.com/foomo/gotsrpc/v2/example/errors

go 1.16

require (
	github.com/foomo/gotsrpc/v2 v2.0.10
	github.com/kr/pretty v0.3.0 // indirect
	github.com/pkg/errors v0.9.1
	github.com/rogpeppe/go-internal v1.8.1 // indirect
	gopkg.in/check.v1 v1.0.0-20201130134442-10cb98267c6c // indirect
)

replace github.com/foomo/gotsrpc/v2 => ../../
